<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/transaction_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.authorize.sampleapplication.fragments.TransactionFragment"
    android:background="@color/White">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/amount_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/ThemeColor"
        android:elevation="5dp">
    <LinearLayout
        android:id="@+id/amount_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/ThemeColor"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">
        <ImageView
            android:id="@+id/amount_icon"
            android:contentDescription="@string/amount_icon"
            style="@style/Icon"
            android:tint="@color/White"
            android:src="@drawable/ic_attach_money_black_24dp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.3">
            <EditText
                android:id="@+id/editText_amount"
                style="@style/Card_Field_Content"
                android:hint="@string/amount"
                android:textColorHint="@color/White"
                android:textSize="20sp"
                android:textColor="@color/White"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
        <TextView
            android:id="@+id/amount_message"
            style="@style/Error_Message"
            android:background="@color/ThemeColor" />
        <Button
            android:id="@+id/swipe_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/ThemeColor"
            android:textColor="@color/White"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:paddingBottom="5dp"
            android:text="@string/swipe_card_button_text"
            android:textSize="15sp"/>
    </LinearLayout>
    <!--</RelativeLayout>-->
    <RelativeLayout
        android:id="@+id/payment_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <RelativeLayout
            android:id="@+id/payment_information_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/payment_information_text"
            android:layout_width="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="0dp"
            android:layout_height="wrap_content"
            android:text="@string/manual_payment_header"
            android:textColor="@color/Black"
            android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manual_payment_subtitle"
                android:textSize="12sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:paddingBottom="5dp"
                android:layout_below="@id/payment_information_text"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/payment_information_header">
            <LinearLayout
                android:id="@+id/card_number_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/White">
                <ImageView
                    android:id="@+id/credit_card_icon"
                    android:contentDescription="@string/credit_card_icon"
                    style="@style/Icon"
                    android:src="@drawable/ic_payment_black_24dp" />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout_CardNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3">
                    <EditText
                        android:id="@+id/editText_CardNumber"
                        style="@style/Card_Field_Content"
                        android:hint="@string/card_number"
                        android:maxLength="19"
                        android:digits="01234 56789"
                        android:imeOptions="actionNext"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/card_error_message"
                style="@style/Error_Message"
                android:text="@string/card_number_hint"
                android:layout_below="@id/card_number_field" />
            <LinearLayout
                android:id="@+id/exp_date_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/card_number_field">
                <ImageView
                    android:id="@+id/exp_date_icon"
                    android:contentDescription="@string/calendar_icon"
                    style="@style/Icon"
                    android:src="@drawable/ic_event_note_black_18dp"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout_CardExpDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3" >
                    <EditText
                        android:id="@+id/editText_CardExpDate"
                        style="@style/Card_Field_Content"
                        android:hint="@string/exp_date"
                        android:maxLength="5"
                        android:inputType="date"
                        android:imeOptions="actionNext"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/exp_date_error_message"
                style="@style/Error_Message"
                android:text="@string/exp_date_hint"
                android:layout_below="@id/exp_date_field" />
            <LinearLayout
                android:id="@+id/cvv_number_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/exp_date_field">
                <ImageView
                    android:id="@+id/security_card_icon"
                    android:contentDescription="@string/credit_card_icon"
                    style="@style/Icon"
                    android:src="@drawable/ic_lock_black_24dp"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout_CardCVV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3">
                    <EditText
                        android:id="@+id/editText_CardCVV"
                        style="@style/Card_Field_Content"
                        android:hint="@string/cvv_number"
                        android:maxLength="3"
                        android:imeOptions="actionNext"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/cvv_error_message"
                style="@style/Error_Message"
                android:text="@string/cvv_hint"
                android:layout_below="@id/cvv_number_field" />
            <LinearLayout
                android:id="@+id/zipcode_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/cvv_number_field">
                <ImageView
                    android:id="@+id/zipcode_icon"
                    android:contentDescription="@string/location_icon"
                    style="@style/Icon"
                    android:src="@drawable/ic_place_black_24dp" />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout_CardZipcode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3">
                    <EditText
                        android:id="@+id/editText_CardZipCode"
                        style="@style/Card_Field_Content"
                        android:hint="@string/zipcode"
                        android:maxLength="5"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/zipcode_error_message"
                style="@style/Error_Message"
                android:layout_below="@id/zipcode_field" />
        </RelativeLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/transaction_button"
        style="@style/Button_Style"
        android:text="@string/make_transaction"
        android:background="@color/Accent" />
    </LinearLayout>
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/snackbarPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>