<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White">
    <RelativeLayout
        android:id="@+id/item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp">
        <LinearLayout
            android:id="@+id/text_fields"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <TextView android:id="@+id/history_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/recycler_view_amount_text"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:gravity="center_vertical" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView android:id="@+id/history_transaction_id_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="@string/recycler_view_transactionID_text" />
                    <TextView android:id="@+id/history_transaction_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="12sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/history_transaction_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:textSize="12sp"
                        android:text="@string/recycler_view_date_text" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_centerInParent="true"
            android:padding="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/refund_void_image"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textColor="@color/Accent"
                android:textSize="15sp"
                android:visibility="invisible"
                android:background="@drawable/history_item_refund_background"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"/>
            <Button
                android:id="@+id/refund_void_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:elevation="15dp"
                android:visibility="visible"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/Accent"
                android:textColor="@color/White" />
        </RelativeLayout>
    </RelativeLayout>
    <ImageView
        android:background="@color/HistoryLineColor"
        android:contentDescription="@string/recycler_view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/item"/>
</RelativeLayout>